Correct contrast

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -61,7 +61,7 @@ body {
 
   .my-description-column p {
     font-family: 'Poppins', sans-serif;
-    color: $description-text-color;
+    color: #f5fcfc;
     font-weight: normal;
     font-style: normal;
     font-size: 1rem;
